fix(car-list) items were overflowing vertically closes #30

--- a/src/styles/reports-mobile.styl
+++ b/src/styles/reports-mobile.styl
@@ -6,13 +6,7 @@
 
     yi-card-list
       flex 1
-      flex-direction row
-      max-width 100%
-      min-height bottomPannelMinHeight
-      padding 1rem
-      width 100%
-      overflow-x auto
-      overflow-y hidden
+      min-width 100%
 
       yi-card
         margin auto 1rem
