--- a/src/styles/reports.styl
+++ b/src/styles/reports.styl
@@ -36,30 +36,10 @@
       z-index 1
 
   yi-card-list
-    background fade-out(colorBlack, 20%)
-    display flex
     flex 1
-    flex-direction column
-    flex-shrink 0
-    justify-content space-around
     height 100%
-    padding 2rem 1rem
-    max-width rightPanelWidth
     min-width rightPanelWidth
-    overflow-x hidden
-    overflow-y auto
     z-index 2
-
-    &::-webkit-scrollbar
-      width 4px
-      height 4px
-    &::-webkit-scrollbar-thumb
-      background fade-out(#fff, 50%)
-      border-radius 2px
-
-    yi-card
-      margin 1rem auto
-      width 100%
 
   yi-selector
     absolute bottom 0 right rightPanelWidth
